# fayetrader

./: .gitignore  PROJECT_MEMORY.md  README.md  pyproject.toml
app/: main.py
app/agents/: trading_agent.py
app/api/: routes.py
app/brokers/: alpaca_paper.py  paper.py
app/core/: adapters.py  config.py  time.py
app/data/: alpaca_market.py  catalyst.py  market.py
app/models/: catalyst.py  controls.py  dashboard.py  events.py  learning.py  types.py
app/services/: chat_store.py  engine.py  evaluator.py  event_store.py  learning_store.py  model_state_store.py  notification_center.py  portfolio.py  risk.py  strategy_lab.py
app/static/: dashboard.css  dashboard.js
docs/: ADR_M5_MULTI_AGENT_GATE.md  BUILD_PLAN.md  M7_CLOSEOUT.md  M7_TRIAGE.md  OPERATIONS_RUNBOOK.md
tests/: conftest.py  test_adapters.py  test_dashboard.py  test_health.py  test_learning.py  test_model_state.py  test_notification_center.py  test_risk.py  test_soak.py
